<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I-work</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"设置解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_chat">发起会话</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="feed_circle">同事圈</string>
    <string name="server_url">http://192.168.137.1/api</string>
    <string name="department">部门</string>
    <string name="mobile">手机</string>
    <string name="tel">电话</string>
    <string name="position">职务</string>
    <string name="my_msg_mark">个人签名</string>
    <string name="person_info_bq_link">传送文件/照片到电脑</string>
    <string name="contact_send_message">消息</string>
    <string name="contact_call_voip">通话</string>
    <string name="view_per_info">联系人资料</string>
    <string name="account_input_hint">请输入帐号</string>
    <string name="password">密码</string>
    <string name="login_space">登 录</string>
    <string name="login_setting">登录设置</string>
    <string name="my_profile">我的资料</string>
    <string name="interface_display">界面显示</string>
    <string name="chat_bg">聊天背景</string>
    <string name="font_size">字体大小</string>
    <string name="message_notice">消息通知</string>
    <string name="general_setting">通用设置</string>
    <string name="secure_and_private">安全和隐私</string>
    <string name="about">关于</string>
    <string name="public_zone">企业空间</string>
    <string name="private_zone">个人空间</string>
    <string name="checkforupdate">检查更新</string>
    <string name="feedback">反馈建议</string>
    <string name="help">帮助</string>
    <string name="about_copyright">Copyright © 2015 iwork</string>
    <string name="feedback_softwareVersion">软件版本：</string>
    <string name="feedback_mobilePlatform">手机平台：</string>
    <string name="feedback_networkType">网络类型：</string>
    <string name="feedback_languageEnvironment">语言环境：</string>
    <string name="feedback_sendSystemLogcat">发送系统日志，以便解决问题</string>
    <string name="feedback_input_hint">请输入您的反馈意见、联系方式</string>
    <string name="receve_newmsg">接受新消息通知</string>
    <string name="sound">声音</string>
    <string name="vibrate">震动</string>
    <string name="nightmsg">夜间防骚扰模式</string>
    <string name="blink">通知时指示灯闪烁</string>
    <string name="showmsgcontent">通知显示消息内容</string>
    <string name="genera_setting">通用设置</string>
    <string name="picture_network">2G/3G/4G自动接收图片</string>
    <string name="headpic_network">2G/3G/4G联系人头像更新</string>
    <string name="enter_send">回车键发送消息</string>
    <string name="security_setting">安全设置与隐私</string>
    <string name="gesture_code">手势密码</string>
    <string name="gesture_code_not_setting">未设置</string>
    <string name="clean_trace">清理痕迹</string>
    <string name="syn_chat_record">同步最近聊天消息</string>
    <string name="modify_pwd">修改登录密码</string>
    <string name="clean_trace_thirty_days_before">清理30天以前记录</string>
    <string name="clean_all_trace">清理全部记录</string>
    <string name="clean_hint">记录是指帐号下的聊天记录、文件等等</string>
    <string name="clean_personal_file">清理个人文件夹</string>
    <string name="clean_hint2">文件存放在SD卡BQ对应的目录下</string>
    <string name="clean_setting">清理设置</string>
    <string name="popwin_clean_trace">清空痕迹</string>
    <string name="clean_per_pic">图片:</string>
    <string name="clean_per_audio_file">语音:</string>
    <string name="clean_per_video_file">视频文件:</string>
    <string name="clean_per_other_file">文件:</string>
    <string name="clean">清理</string>
    <string name="cur_has">当前共有</string>
    <string name="cur_file_size">个文件,大小为</string>
    <string name="clean_per_pic_confirm">确定清理所有会话中的图片吗?</string>
    <string name="clean_per_audio_confirm">确定清理所有会话中的语音吗?</string>
    <string name="clean_per_video_confirm">确定清理所有会话中的视频文件吗?</string>
    <string name="clean_per_other_confirm">确定清理所有会话中的文件吗?</string>
    <string name="clean_confirm">确定</string>
    <string name="clean_cancel">取消</string>
    <string name="clean_pic_failure">图片清理失败 !</string>
    <string name="clean_audio_failure">语音清理失败 !</string>
    <string name="clean_video_failure">视频 文件清理失败 !</string>
    <string name="clean_others_failure">文件清理失败 !</string>
    <string name="clean_remind">清理提醒</string>
    <string name="clean_setting_text01">当个人文件夹大小超过</string>
    <string name="clean_setting_text02">MB</string>
    <string name="clean_setting_text03">时,提醒我清理</string>
    <string name="clean_setting_tips">关闭清理提醒后,将不再提醒清理</string>
    <string name="clean_setting_sizeofzero_tip">请输入大于0的文件夹大小 !</string>
    <string name="clean_setting_note">提示</string>
    <string name="clean_remind_tip01">您的个人文件夹大小超过</string>
    <string name="clean_remind_tip02">MB,请及时清理 !</string>
    <string name="clean_remind_btn_detail">查看详情</string>
    <string name="gesture_code_title_text">创建一个屏幕解锁图案,这样他人在借用你的手机时无法打开iwork。</string>
    <string name="create_now">立即创建</string>
    <string name="kaoqin_daka">考勤打卡</string>
    <string name="wq_kaoqin_tixing">提醒</string>
    <string name="kaoqin_remind">考勤提醒</string>
    <string name="new_schedule">创建会议安排</string>
    <string name="empty_sche_list">您还没有会议安排</string>
    <string name="equi_">会议室设备：</string>
    <string name="next_sche_">下一个会议：</string>
    <string name="sche_name_">会议名称：</string>
    <string name="sche_type_">会议类型：</string>
    <string name="sche_date_">会议日期：</string>
    <string name="start_time_">开始时间：</string>
    <string name="end_time_">结束时间：</string>
    <string name="duration_time_">会议时长：</string>
    <string name="sche_time_">会议时间：</string>
    <string name="notif_time_">会前提醒：</string>
    <string name="sche_desc_">会议说明：</string>
    <string name="sche_users_">与会人：</string>
    <string name="loading">加载中…</string>
    <string name="create_time">创建时间：</string>
    <string name="room_">会议室：</string>
    <string name="convener_">召集人：</string>
    <string name="terminal_num_">通话方数：</string>
    <string name="send_mail_">发送邮件：</string>
    <string name="need_sche_password_">需要会议密码：</string>
    <string name="vmcs_status_">审核状态：</string>
    <string name="unpass_info_">失败原因：</string>
    <string name="call_num_">会议呼入号：</string>
    <string name="call_pw_">会议密码：</string>
    <string name="my_confirm_">我的回执：</string>
    <string name="confirm_accept">接受</string>
    <string name="confirm_reject">拒绝</string>
    <string name="failed">失败</string>
    <string name="success">成功</string>
    <string name="retry">重试</string>
    <string name="room_name_">会议室名称：</string>
    <string name="room_city_">所在城市：</string>
    <string name="room_addr_">会议室地址：</string>
    <string name="room_phone_">会议室电话：</string>
    <string name="room_capacity_">可容纳人数：</string>
    <string name="describe_">备注：</string>
    <string name="equi_proj">投影仪</string>
    <string name="equi_wifi">WIFI</string>
    <string name="equi_board">白板</string>
    <string name="equi_video">视频设备</string>
    <string name="equi_audio">音频设备</string>
    <string name="del_room">删除会议室</string>
    <string name="edit_room">会议室修改</string>
    <string name="submit">提交</string>
    <string name="extended_conf">延长会议时间</string>
    <string name="modify_rooms">修改会议室</string>
    <string name="media_type_local">本地会议</string>
    <string name="_terminal_num">方通话</string>
    <string name="sign_in_">会议签到：</string>
    <string name="private_sche_">会议保密：</string>
    <string name="tip_private_sche">保密会议将不在动态中显示</string>
    <string name="sche_share_">会议分享：</string>
    <string name="tip_vmcs_share">视频会议需审核通过后才可分享</string>
    <string name="need_password_">会议密码：</string>
    <string name="other_users_">外部人员：</string>
    <string name="hide_4_other_users">请输入外部与会人的邮箱(以逗号分割多个邮箱)</string>
    <string name="sche_mail_">发邮件给创建者：</string>

</resources>