<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/part1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_name_" />

                    <EditText
                        android:id="@+id/room_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="21"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|center"
                        android:minWidth="82.0dip"
                        android:text="@string/room_city_" />

                    <EditText
                        android:id="@+id/room_city"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/room_addr_" />

                    <EditText
                        android:id="@+id/room_addr"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="43"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:minWidth="82.0dip"
                    android:text="@string/room_phone_" />

                <EditText
                    android:id="@+id/room_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="25"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_capacity_" />

                <EditText
                    android:id="@+id/person_num"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="5"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/equi_" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/equi_proj"
                        style="@style/Text.Min"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableLeft="@drawable/equi_proj"
                        android:text="@string/equi_proj" />

                    <CheckBox
                        android:id="@+id/equi_wifi"
                        style="@style/Text.Min"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableLeft="@drawable/equi_wifi"
                        android:text="@string/equi_wifi" />

                    <CheckBox
                        android:id="@+id/equi_board"
                        style="@style/Text.Min"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableLeft="@drawable/equi_board"
                        android:text="@string/equi_board" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/equi_video"
                        style="@style/Text.Min"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableLeft="@drawable/equi_video"
                        android:text="@string/equi_video" />

                    <CheckBox
                        android:id="@+id/equi_audio"
                        style="@style/Text.Min"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:drawableLeft="@drawable/equi_audio"
                        android:text="@string/equi_audio" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe_" />

                <EditText
                    android:id="@+id/room_info"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="3" />
            </LinearLayout>

            <Button
                android:id="@+id/delete"
                style="@style/Widget.Button.while"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22.0dip"
                android:background="@drawable/btn_newwhile"
                android:onClick="deleteRoom"
                android:text="@string/del_room" />

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45.0dip"
                android:layout_marginTop="22.0dip"
                android:background="@drawable/btn_newblue"
                android:onClick="submit"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>